# react-native-superpowered-sdk

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-superpowered-sdk.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: MultiTracksPlayer.cpp  MultiTracksPlayer.h  Track.cpp  Track.h
android/src/main/java/com/reactnativesuperpoweredsdk/: SuperpoweredSdkModule.java  SuperpoweredSdkModule.kt  SuperpoweredSdkPackage.java  SuperpoweredSdkPackage.kt
cpp/: react-native-superpowered-sdk.cpp
example/: app.json  package.json
example/android/: build.gradle  gradle.properties  settings.gradle
example/android/app/: build.gradle  release.keystore
example/ios/: File.swift  Podfile
example/ios/SuperpoweredSdkExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/SuperpoweredSdkExample.xcodeproj/: project.pbxproj
example/ios/SuperpoweredSdkExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
example/src/atoms/Button/: index.tsx  styles.ts  types.ts
example/src/atoms/Text/: index.tsx
example/src/molecules/: index.ts
example/src/molecules/PlayPauseButton/: index.tsx  styles.ts
example/src/organisms/: index.ts
example/src/style/: colors.ts  elevation.ts  index.ts  palette.ts  typeScale.ts
ios/: MultiTracksPlayer.h  MultiTracksPlayer.mm  SuperpoweredSdk.h  SuperpoweredSdk.mm  Track.h  Track.mm
ios/SuperpoweredSdk.xcodeproj/: project.pbxproj
src/: Superpowered.ts  index.tsx  useSuperpowered.ts
(+16 files in other folders)
